[Common + AI] resolved conflict, removed api keys